# torbox-sdk-py

./: .gitignore  PyPI_README.md  README.md  install.cmd  install.sh  pyproject.toml
documentation/models/: AddReferralToAccountOkResponse.md  ControlQueuedTorrentOkResponse.md  ControlTorrentOkResponse.md  CreateTorrentOkResponse.md  CreateTorrentRequest.md  CreateUsenetDownloadOkResponse.md  CreateUsenetDownloadRequest.md  CreateWebDownloadOkResponse.md  CreateWebDownloadRequest.md  ExportTorrentDataOkResponse.md  GetAllJobsByHashOkResponse.md  GetAllJobsOkResponse.md  GetChangelogsJsonOkResponse.md  GetHosterListOkResponse.md  GetNotificationFeedOkResponse.md  GetStatsOkResponse.md  GetTorrentCachedAvailabilityOkResponse.md  GetTorrentInfo1OkResponse.md  GetTorrentInfo1Request.md  GetTorrentInfoOkResponse.md  GetTorrentListOkResponse.md  GetUpStatusOkResponse.md  GetUsenetListOkResponse.md  GetUserDataOkResponse.md  GetWebDownloadListOkResponse.md  RequestDownloadLinkOkResponse.md  SearchAllTorrentsFromScraperOkResponse.md
documentation/services/: GeneralService.md  IntegrationsService.md  NotificationsService.md  QueuedService.md  RssFeedsService.md  TorrentsService.md  UsenetService.md  UserService.md  WebDownloadsDebridService.md
examples/: install.cmd  install.sh  sample.py
src/torbox_api/: sdk.py
src/torbox_api/models/: __init__.py  add_referral_to_account_ok_response.py  control_torrent_ok_response.py  create_torrent_ok_response.py  create_torrent_request.py  create_usenet_download_ok_response.py  create_usenet_download_request.py  get_stats_ok_response.py  (+16 more)
(+9 files in other folders)
