[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torbox-api"
version = "1.0.6"
license = { text = "MIT" }
description = """You can view the full documentation at https://api-docs.torbox.app."""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0"
]
